syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.applibot.gen.several";
option java_outer_classname = "SeveralServiceProto";

package several;

service SeveralService {
    rpc GetSeveralData (SeveralRequest) returns (SeveralResponse) {
    }
    rpc UpdateSeveralData (SeveralRequest) returns (SeveralResponse) {
    }
}

enum Animal {
    DOG = 0;
    CAT = 1;
    PIG = 2;
    FOX = 3;
}

message SeveralRequest {
    float floatData = 1;
    double doubleData = 2;
    int32 intData = 3;
    int64 longData = 4;
    bool boolData = 5;
    string stringData = 6;
    bytes byteData = 7;
    repeated int32 list = 8;
    repeated innerTest innerList = 9;
    map<int32, string> dic = 10;
    map<int32, innerTest> dicRepeat = 11;
    Animal animal = 12;
}

message innerTest {
    repeated float fList = 1;
}

message SeveralResponse {
    bool isSuccess = 1;
}
